# gedit_project_plugin

./: Makefile.am  README_hun_iso88592.txt  README_hun_utf8.txt  autogen.sh  compile-plugin  configure.ac  install-plugin  project-plugin.c  project-plugin.h  project.gedit-plugin  remove-plugin  sample.gedit-prj
po/: POTFILES.in
src/: Makefile.am  project-plugin.c  project-plugin.glade  project-plugin.h  project.gedit-plugin.desktop.in
